--- a/css/style.css
+++ b/css/style.css
@@ -514,24 +514,32 @@ banner  结束
 .ourServe-r-accordionbox{
 	width: 100%;
 	height: 100%;
+	display: flex;
+	-ms-display: flexbox;
 }
 .accordionbox-item{
 	width: 1.34rem;
 	height: 100%;
-	float: left;
+	/* float: left; */
     overflow: hidden;
     position: relative;
     cursor: pointer;
+	display: flex;
+	-ms-display: flexbox;
 }
-.accordionbox-item .curr-bgbox{
-	display: none;
+.puAway-box{
+	width: 1.34rem;
+	height: 100%;
+	position: relative;
+	overflow: hidden;
 }
-
-.accordionbox-item.curr {
-    width: 4.32rem;
-}
-.accordionbox-item.curr .curr-bgbox {
+/* .puAway-box>img{
 	width: 100%;
+	height: 100%;
+} */
+.accordionbox-item .curr-bgbox {
+	flex: 1;
+	width: 0;
     height: 100%;
 	padding: 0.2rem 0;
 	text-align: center;
@@ -563,13 +571,7 @@ banner  结束
 	text-overflow: ellipsis;
 	overflow: hidden;
 }
-.puAway-box{
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-}
+
 .layer{
 	width: 100%;
 	height: 100%;
@@ -668,13 +670,13 @@ banner  结束
 }
 .ad-box-title{
 	text-align: center;
-	font-size: 16px;
-	padding-top: 6px;
+	font-size: 0.18rem;
+	padding-top: 0.06rem;
 }
 .ad-box-text{
 	width: 100%;
-	font-size: 13px;
-	margin-top: 6px;
+	font-size: 0.16rem;
+	margin-top: 0.06rem;
 	display: box;
 	display: -webkit-box;
 	display: -ms-box;
